spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,11 @@
 
 body {
   margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   min-height: 100vh;
 }
 
+main {
+  width: 100%;
+  height: 100%;
+}
